Fix Tab Gap

--- a/.factory/_/lot/links.scss
+++ b/.factory/_/lot/links.scss
@@ -8,6 +8,11 @@
   > ul {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    > li {
+      display: flex;
+      position: relative;
+    }
   }
   > .description {
     @extend .small;
